DatabaseAntlr/static/generated-parser/MySQLParser.js
// Generated from MySQL.g4 by ANTLR 4.7.2
// jshint ignore: start
var antlr4 = require('antlr4/index');
var MySQLListener = require('./MySQLListener').MySQLListener;
var grammarFileName = "MySQL.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "';'", "'*'", null, "'.'", "','", "'('", "')'" ];

var symbolicNames = [ null, null, null, "WS", "DOT", "COMMA", "PL", "PR", 
                      "NUMBER", "STRING", "INSERT", "VALUES", "DELETE", 
                      "SELECT", "WHERE", "FROM", "BETWEEN", "LIKE", "IN", 
                      "RELATIONAL", "AND", "OR", "LOGICAL", "IDENTIFIER", 
                      "DOT_IDENTIFIER", "S_CONDITION" ];

var ruleNames =  [ "s", "column", "column_name", "table", "where_c", "condition", 
                   "values_c" ];

function MySQLParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

MySQLParser.prototype = Object.create(antlr4.Parser.prototype);
MySQLParser.prototype.constructor = MySQLParser;

Object.defineProperty(MySQLParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

MySQLParser.EOF = antlr4.Token.EOF;
MySQLParser.T__0 = 1;
MySQLParser.T__1 = 2;
MySQLParser.WS = 3;
MySQLParser.DOT = 4;
MySQLParser.COMMA = 5;
MySQLParser.PL = 6;
MySQLParser.PR = 7;
MySQLParser.NUMBER = 8;
MySQLParser.STRING = 9;
MySQLParser.INSERT = 10;
MySQLParser.VALUES = 11;
MySQLParser.DELETE = 12;
MySQLParser.SELECT = 13;
MySQLParser.WHERE = 14;
MySQLParser.FROM = 15;
MySQLParser.BETWEEN = 16;
MySQLParser.LIKE = 17;
MySQLParser.IN = 18;
MySQLParser.RELATIONAL = 19;
MySQLParser.AND = 20;
MySQLParser.OR = 21;
MySQLParser.LOGICAL = 22;
MySQLParser.IDENTIFIER = 23;
MySQLParser.DOT_IDENTIFIER = 24;
MySQLParser.S_CONDITION = 25;

MySQLParser.RULE_s = 0;
MySQLParser.RULE_column = 1;
MySQLParser.RULE_column_name = 2;
MySQLParser.RULE_table = 3;
MySQLParser.RULE_where_c = 4;
MySQLParser.RULE_condition = 5;
MySQLParser.RULE_values_c = 6;


function SContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MySQLParser.RULE_s;
    return this;
}

SContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SContext.prototype.constructor = SContext;

SContext.prototype.SELECT = function() {
    return this.getToken(MySQLParser.SELECT, 0);
};

SContext.prototype.column = function() {
    return this.getTypedRuleContext(ColumnContext,0);
};

SContext.prototype.FROM = function() {
    return this.getToken(MySQLParser.FROM, 0);
};

SContext.prototype.table = function() {
    return this.getTypedRuleContext(TableContext,0);
};

SContext.prototype.WS = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(MySQLParser.WS);
    } else {
        return this.getToken(MySQLParser.WS, i);
    }
};


SContext.prototype.where_c = function() {
    return this.getTypedRuleContext(Where_cContext,0);
};

SContext.prototype.DELETE = function() {
    return this.getToken(MySQLParser.DELETE, 0);
};

SContext.prototype.INSERT = function() {
    return this.getToken(MySQLParser.INSERT, 0);
};

SContext.prototype.VALUES = function() {
    return this.getToken(MySQLParser.VALUES, 0);
};

SContext.prototype.PL = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(MySQLParser.PL);
    } else {
        return this.getToken(MySQLParser.PL, i);
    }
};


SContext.prototype.values_c = function() {
    return this.getTypedRuleContext(Values_cContext,0);
};

SContext.prototype.PR = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(MySQLParser.PR);
    } else {
        return this.getToken(MySQLParser.PR, i);
    }
};


SContext.prototype.column_name = function() {
    return this.getTypedRuleContext(Column_nameContext,0);
};

SContext.prototype.enterRule = function(listener) {
    if(listener instanceof MySQLListener ) {
        listener.enterS(this);
	}
};

SContext.prototype.exitRule = function(listener) {
    if(listener instanceof MySQLListener ) {
        listener.exitS(this);
	}
};




MySQLParser.SContext = SContext;

MySQLParser.prototype.s = function() {

    var localctx = new SContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, MySQLParser.RULE_s);
    var _la = 0; // Token type
    try {
        this.state = 104;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case MySQLParser.SELECT:
            this.enterOuterAlt(localctx, 1);
            this.state = 14;
            this.match(MySQLParser.SELECT);
            this.state = 16; 
            this._errHandler.sync(this);
            var _alt = 1;
            do {
            	switch (_alt) {
            	case 1:
            		this.state = 15;
            		this.match(MySQLParser.WS);
            		break;
            	default:
            		throw new antlr4.error.NoViableAltException(this);
            	}
            	this.state = 18; 
            	this._errHandler.sync(this);
            	_alt = this._interp.adaptivePredict(this._input,0, this._ctx);
            } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
            this.state = 20;
            this.column();
            this.state = 22; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            do {
                this.state = 21;
                this.match(MySQLParser.WS);
                this.state = 24; 
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            } while(_la===MySQLParser.WS);
            this.state = 26;
            this.match(MySQLParser.FROM);
            this.state = 28; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            do {
                this.state = 27;
                this.match(MySQLParser.WS);
                this.state = 30; 
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            } while(_la===MySQLParser.WS);
            this.state = 32;
            this.table();
            this.state = 36;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===MySQLParser.WS) {
                this.state = 33;
                this.match(MySQLParser.WS);
                this.state = 38;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 40;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===MySQLParser.WHERE) {
                this.state = 39;
                this.where_c();
            }

            this.state = 42;
            this.match(MySQLParser.T__0);
            break;
        case MySQLParser.DELETE:
            this.enterOuterAlt(localctx, 2);
            this.state = 44;
            this.match(MySQLParser.DELETE);
            this.state = 46; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            do {
                this.state = 45;
                this.match(MySQLParser.WS);
                this.state = 48; 
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            } while(_la===MySQLParser.WS);
            this.state = 50;
            this.match(MySQLParser.FROM);
            this.state = 52; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            do {
                this.state = 51;
                this.match(MySQLParser.WS);
                this.state = 54; 
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            } while(_la===MySQLParser.WS);
            this.state = 56;
            this.table();
            this.state = 60;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===MySQLParser.WS) {
                this.state = 57;
                this.match(MySQLParser.WS);
                this.state = 62;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 64;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===MySQLParser.WHERE) {
                this.state = 63;
                this.where_c();
            }

            this.state = 66;
            this.match(MySQLParser.T__0);
            break;
        case MySQLParser.INSERT:
            this.enterOuterAlt(localctx, 3);
            this.state = 68;
            this.match(MySQLParser.INSERT);
            this.state = 70; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            do {
                this.state = 69;
                this.match(MySQLParser.WS);
                this.state = 72; 
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            } while(_la===MySQLParser.WS);
            this.state = 74;
            this.table();
            this.state = 85;
            this._errHandler.sync(this);
            var la_ = this._interp.adaptivePredict(this._input,11,this._ctx);
            if(la_===1) {
                this.state = 78;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while(_la===MySQLParser.WS) {
                    this.state = 75;
                    this.match(MySQLParser.WS);
                    this.state = 80;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
                this.state = 81;
                this.match(MySQLParser.PL);
                this.state = 82;
                this.column_name();
                this.state = 83;
                this.match(MySQLParser.PR);

            }
            this.state = 88; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            do {
                this.state = 87;
                this.match(MySQLParser.WS);
                this.state = 90; 
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            } while(_la===MySQLParser.WS);
            this.state = 92;
            this.match(MySQLParser.VALUES);
            this.state = 96;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===MySQLParser.WS) {
                this.state = 93;
                this.match(MySQLParser.WS);
                this.state = 98;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 99;
            this.match(MySQLParser.PL);
            this.state = 100;
            this.values_c();
            this.state = 101;
            this.match(MySQLParser.PR);
            this.state = 102;
            this.match(MySQLParser.T__0);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ColumnContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MySQLParser.RULE_column;
    return this;
}

ColumnContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ColumnContext.prototype.constructor = ColumnContext;

ColumnContext.prototype.column_name = function() {
    return this.getTypedRuleContext(Column_nameContext,0);
};

ColumnContext.prototype.enterRule = function(listener) {
    if(listener instanceof MySQLListener ) {
        listener.enterColumn(this);
	}
};

ColumnContext.prototype.exitRule = function(listener) {
    if(listener instanceof MySQLListener ) {
        listener.exitColumn(this);
	}
};




MySQLParser.ColumnContext = ColumnContext;

MySQLParser.prototype.column = function() {

    var localctx = new ColumnContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, MySQLParser.RULE_column);
    try {
        this.state = 108;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case MySQLParser.T__1:
            this.enterOuterAlt(localctx, 1);
            this.state = 106;
            this.match(MySQLParser.T__1);
            break;
        case MySQLParser.WS:
        case MySQLParser.IDENTIFIER:
            this.enterOuterAlt(localctx, 2);
            this.state = 107;
            this.column_name();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function Column_nameContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MySQLParser.RULE_column_name;
    return this;
}

Column_nameContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Column_nameContext.prototype.constructor = Column_nameContext;

Column_nameContext.prototype.IDENTIFIER = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(MySQLParser.IDENTIFIER);
    } else {
        return this.getToken(MySQLParser.IDENTIFIER, i);
    }
};


Column_nameContext.prototype.WS = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(MySQLParser.WS);
    } else {
        return this.getToken(MySQLParser.WS, i);
    }
};


Column_nameContext.prototype.COMMA = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(MySQLParser.COMMA);
    } else {
        return this.getToken(MySQLParser.COMMA, i);
    }
};


Column_nameContext.prototype.enterRule = function(listener) {
    if(listener instanceof MySQLListener ) {
        listener.enterColumn_name(this);
	}
};

Column_nameContext.prototype.exitRule = function(listener) {
    if(listener instanceof MySQLListener ) {
        listener.exitColumn_name(this);
	}
};




MySQLParser.Column_nameContext = Column_nameContext;

MySQLParser.prototype.column_name = function() {

    var localctx = new Column_nameContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, MySQLParser.RULE_column_name);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 113;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===MySQLParser.WS) {
            this.state = 110;
            this.match(MySQLParser.WS);
            this.state = 115;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 116;
        this.match(MySQLParser.IDENTIFIER);
        this.state = 120;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,17,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 117;
                this.match(MySQLParser.WS); 
            }
            this.state = 122;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,17,this._ctx);
        }

        this.state = 133;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===MySQLParser.COMMA) {
            this.state = 123;
            this.match(MySQLParser.COMMA);
            this.state = 127;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===MySQLParser.WS) {
                this.state = 124;
                this.match(MySQLParser.WS);
                this.state = 129;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 130;
            this.match(MySQLParser.IDENTIFIER);
            this.state = 135;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function TableContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MySQLParser.RULE_table;
    return this;
}

TableContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
TableContext.prototype.constructor = TableContext;

TableContext.prototype.IDENTIFIER = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(MySQLParser.IDENTIFIER);
    } else {
        return this.getToken(MySQLParser.IDENTIFIER, i);
    }
};


TableContext.prototype.COMMA = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(MySQLParser.COMMA);
    } else {
        return this.getToken(MySQLParser.COMMA, i);
    }
};


TableContext.prototype.enterRule = function(listener) {
    if(listener instanceof MySQLListener ) {
        listener.enterTable(this);
	}
};

TableContext.prototype.exitRule = function(listener) {
    if(listener instanceof MySQLListener ) {
        listener.exitTable(this);
	}
};




MySQLParser.TableContext = TableContext;

MySQLParser.prototype.table = function() {

    var localctx = new TableContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, MySQLParser.RULE_table);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 136;
        this.match(MySQLParser.IDENTIFIER);
        this.state = 141;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===MySQLParser.COMMA) {
            this.state = 137;
            this.match(MySQLParser.COMMA);
            this.state = 138;
            this.match(MySQLParser.IDENTIFIER);
            this.state = 143;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function Where_cContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MySQLParser.RULE_where_c;
    return this;
}

Where_cContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Where_cContext.prototype.constructor = Where_cContext;

Where_cContext.prototype.WHERE = function() {
    return this.getToken(MySQLParser.WHERE, 0);
};

Where_cContext.prototype.condition = function() {
    return this.getTypedRuleContext(ConditionContext,0);
};

Where_cContext.prototype.WS = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(MySQLParser.WS);
    } else {
        return this.getToken(MySQLParser.WS, i);
    }
};


Where_cContext.prototype.enterRule = function(listener) {
    if(listener instanceof MySQLListener ) {
        listener.enterWhere_c(this);
	}
};

Where_cContext.prototype.exitRule = function(listener) {
    if(listener instanceof MySQLListener ) {
        listener.exitWhere_c(this);
	}
};




MySQLParser.Where_cContext = Where_cContext;

MySQLParser.prototype.where_c = function() {

    var localctx = new Where_cContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, MySQLParser.RULE_where_c);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 144;
        this.match(MySQLParser.WHERE);
        this.state = 146; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 145;
            this.match(MySQLParser.WS);
            this.state = 148; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(_la===MySQLParser.WS);
        this.state = 150;
        this.condition();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ConditionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MySQLParser.RULE_condition;
    return this;
}

ConditionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ConditionContext.prototype.constructor = ConditionContext;

ConditionContext.prototype.S_CONDITION = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(MySQLParser.S_CONDITION);
    } else {
        return this.getToken(MySQLParser.S_CONDITION, i);
    }
};


ConditionContext.prototype.LOGICAL = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(MySQLParser.LOGICAL);
    } else {
        return this.getToken(MySQLParser.LOGICAL, i);
    }
};


ConditionContext.prototype.WS = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(MySQLParser.WS);
    } else {
        return this.getToken(MySQLParser.WS, i);
    }
};


ConditionContext.prototype.enterRule = function(listener) {
    if(listener instanceof MySQLListener ) {
        listener.enterCondition(this);
	}
};

ConditionContext.prototype.exitRule = function(listener) {
    if(listener instanceof MySQLListener ) {
        listener.exitCondition(this);
	}
};




MySQLParser.ConditionContext = ConditionContext;

MySQLParser.prototype.condition = function() {

    var localctx = new ConditionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, MySQLParser.RULE_condition);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 152;
        this.match(MySQLParser.S_CONDITION);
        this.state = 167;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===MySQLParser.WS) {
            this.state = 154; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            do {
                this.state = 153;
                this.match(MySQLParser.WS);
                this.state = 156; 
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            } while(_la===MySQLParser.WS);
            this.state = 158;
            this.match(MySQLParser.LOGICAL);
            this.state = 160; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            do {
                this.state = 159;
                this.match(MySQLParser.WS);
                this.state = 162; 
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            } while(_la===MySQLParser.WS);
            this.state = 164;
            this.match(MySQLParser.S_CONDITION);
            this.state = 169;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function Values_cContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MySQLParser.RULE_values_c;
    return this;
}

Values_cContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Values_cContext.prototype.constructor = Values_cContext;

Values_cContext.prototype.NUMBER = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(MySQLParser.NUMBER);
    } else {
        return this.getToken(MySQLParser.NUMBER, i);
    }
};


Values_cContext.prototype.STRING = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(MySQLParser.STRING);
    } else {
        return this.getToken(MySQLParser.STRING, i);
    }
};


Values_cContext.prototype.WS = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(MySQLParser.WS);
    } else {
        return this.getToken(MySQLParser.WS, i);
    }
};


Values_cContext.prototype.COMMA = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(MySQLParser.COMMA);
    } else {
        return this.getToken(MySQLParser.COMMA, i);
    }
};


Values_cContext.prototype.enterRule = function(listener) {
    if(listener instanceof MySQLListener ) {
        listener.enterValues_c(this);
	}
};

Values_cContext.prototype.exitRule = function(listener) {
    if(listener instanceof MySQLListener ) {
        listener.exitValues_c(this);
	}
};




MySQLParser.Values_cContext = Values_cContext;

MySQLParser.prototype.values_c = function() {

    var localctx = new Values_cContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, MySQLParser.RULE_values_c);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 173;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===MySQLParser.WS) {
            this.state = 170;
            this.match(MySQLParser.WS);
            this.state = 175;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 176;
        _la = this._input.LA(1);
        if(!(_la===MySQLParser.NUMBER || _la===MySQLParser.STRING)) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
        this.state = 180;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===MySQLParser.WS) {
            this.state = 177;
            this.match(MySQLParser.WS);
            this.state = 182;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 193;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===MySQLParser.COMMA) {
            this.state = 183;
            this.match(MySQLParser.COMMA);
            this.state = 187;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===MySQLParser.WS) {
                this.state = 184;
                this.match(MySQLParser.WS);
                this.state = 189;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 190;
            _la = this._input.LA(1);
            if(!(_la===MySQLParser.NUMBER || _la===MySQLParser.STRING)) {
            this._errHandler.recoverInline(this);
            }
            else {
            	this._errHandler.reportMatch(this);
                this.consume();
            }
            this.state = 195;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


exports.MySQLParser = MySQLParser;
